--- a/foodgram/templates/indexAuth.html
+++ b/foodgram/templates/indexAuth.html
@@ -164,8 +164,8 @@
         </div>
     </footer>
   <script src="./js/components/MainCards.js"></script>
-
-  <script src="./js/components/Purchases.js"></script>
+{% load static %}
+  <script src="{% static 'js/components/Purchases.js' %}"></script>
   <script src="./js/components/Favorites.js"></script>
 
   <script src="./js/config/config.js"></script>
