--- a/foodgram/users/templates/includes/form group.html
+++ b/foodgram/users/templates/includes/form group.html
@@ -7,7 +7,7 @@
 
     <div class="form__field-group">
 
-        {{ field|addclass:"form__input" }}
+        {{ field|add_class:"form__input" }}
 
         {% if form.errors %}
             <span class="form__error">{{ field.errors }}</span>
