--- a/foodgram/templates/base.html
+++ b/foodgram/templates/base.html
@@ -14,6 +14,7 @@
     {% include 'includes/navigation.html' %}
 </header>
 {% block content %}{% endblock %}
+{% include 'includes/paginator.html' %}
 {% include 'includes/footer.html' %}
 </body>
 </html>
