--- a/foodgram/templates/base.html
+++ b/foodgram/templates/base.html
@@ -16,5 +16,7 @@
 {% block content %}{% endblock %}
 {% include 'includes/paginator.html' %}
 {% include 'includes/footer.html' %}
+
+{% block script %}{% endblock %}
 </body>
 </html>
