--- a/foodgram/recipes/templates/index.html
+++ b/foodgram/recipes/templates/index.html
@@ -10,7 +10,7 @@
             {% include "includes/tags.html" %}
         </div>
         {% if user.is_authenticated and view.author and user != view.author %}
-        <div class="author-subscribe" data-author="{{ author.id }}">
+        <div class="author-subscribe" data-author="{{ view.author.id }}">
             {% csrf_token %}
             {% if view.author.id|is_followed:user %}
             <p style="padding: 0 0 2em 0;"><button class="button button_style_light-blue button_size_subscribe" name="subscribe">Отписаться от автора</button></p>
@@ -23,18 +23,26 @@
         {% include 'includes/card_list.html' %}
     </main>
 {% endblock content %}
-
+{% block script %}
+    <script src="{% static 'js/components/MainCards.js' %}"></script>
+    <script src="{% static 'js/components/Purchases.js' %}"></script>
     {% if user.is_authenticated %}
-        <script src="{% static 'js/components/Favorites.js' %}"></script>
-        {% if not view.author %}
+          <script src="{% static 'js/components/Favorites.js' %}"></script>
+    {% endif %}
+    <script src="{% static 'js/config/config.js' %}"></script>
+    <script src="{% static 'js/components/CardList.js' %}"></script>
+    <script src="{% static 'js/components/Header.js' %}"></script>
+
+    <script src="{% static 'js/api/Api.js' %}"></script>
+    {% if user.is_authenticated %}
+        {% if view.author %}
+            <script src="{% static 'js/components/AuthorRecipe.js' %}"></script>
+            <script src="{% static 'js/components/Subscribe.js' %}"></script>
+            <script src="{% static 'authorRecipe.js' %}"></script>
+        {% else %}
             <script src="{% static 'indexAuth.js' %}"></script>
         {% endif %}
     {% else %}
         <script src="{% static 'indexNotAuth.js' %}"></script>
     {% endif %}
-
-    {% if view.author %}
-        <script src="{% static 'js/components/AuthorRecipe.js' %}"></script>
-        <script src="{% static 'js/components/Subscribe.js' %}"></script>
-        <script src="{% static 'authorRecipe.js' %}"></script>
-    {% endif %}
+{% endblock %}
