--- a/foodgram/templates/includes/navigation.html
+++ b/foodgram/templates/includes/navigation.html
@@ -6,8 +6,8 @@
         {% if user.is_authenticated %}
             <li class="nav__item {% if url_name == 'subscriptions' %} nav__item_active {% endif %}"><a href="{% url 'subscriptions' %}" class="nav__link link">Мои подписки</a></li>
             <li class="nav__item {% if url_name == 'password_change' %} nav__item_active {% endif %}"><a href="#" class="nav__link link">Создать рецепт</a></li>
-            <li class="nav__item {% if url_name == 'password_change' %} nav__item_active {% endif %}"><a href="#" class="nav__link link">Избранное</a></li>
-            <li class="nav__item {% if url_name == 'password_change' %} nav__item_active {% endif %}"><a href="#" class="nav__link link">Список покупок</a> <span class="badge badge_style_blue nav__badge" id="counter">4</span></li>
+            <li class="nav__item {% if url_name == 'favorites' %} nav__item_active {% endif %}"><a href="{% url 'favorites' %}" class="nav__link link">Избранное</a></li>
+            <li class="nav__item {% if url_name == 'purchases' %} nav__item_active {% endif %}"><a href="{% url 'purchases' %}" class="nav__link link">Список покупок</a> <span class="badge badge_style_blue nav__badge" id="counter">{% if view.counter %}{{ view.counter }}{% else %}0{% endif %}</span></li>
         {% endif %}
 
         </ul>
