--- a/foodgram/recipes/templates/single_recipe.html
+++ b/foodgram/recipes/templates/single_recipe.html
@@ -40,7 +40,7 @@
             <div class="single-card__section">
                 <h3 class="single-card__section-title">Ингридиенты:</h3>
                 <div class="single-card__items single-card__items_column">
-                    {% for ingredient in recipe.recipeingredient_set.all %}
+                    {% for ingredient in recipe.amount.all %}
                     <p class=" single-card__section-item">{{ ingredient.ingredient.title }} - {{ ingredient.amount }} {{ ingredient.ingredient.unit }}</p>
                     {% endfor %}
                 </div>
