--- a/foodgram/recipes/templates/includes/tags.html
+++ b/foodgram/recipes/templates/includes/tags.html
@@ -2,15 +2,14 @@
 {% load tag_filters %}
 {% with tags_in_request=request|get_tags_from_request %}
 <ul class="tags" style="margin-left: 24px">
-<div style="display: flex; flex-wrap: wrap; gap: 12px;">
-    {% for tag in view.tags %}
-        <li class="tags__item">
-            <a id="{{ tag.slug }}" class="tags__checkbox tags__checkbox_style_{{ tag.color }}
-            {% if tag.slug in tags_in_request %} tags__checkbox_active {% endif %}" href="{{ request|get_filter_link:tag }}"></a>
-            <span class="tags__label">{{ tag.title }}</span>
-        </li>
-    {% endfor %}
-</div>
-
+    <div style="display: flex; flex-wrap: wrap; gap: 12px;">
+        {% for tag in view.tags %}
+            <li class="tags__item">
+                <a id="{{ tag.slug }}" class="tags__checkbox tags__checkbox_style_{{ tag.color }}
+                {% if tag.slug in tags_in_request %} tags__checkbox_active {% endif %}" href="{{ request|get_tag_filter:tag }}"></a>
+                <span class="tags__label">{{ tag.title }}</span>
+            </li>
+        {% endfor %}
+    </div>
 </ul>
 {% endwith %}
