edit/delete recipe

--- a/foodgram/recipes/templates/includes/recipe_card.html
+++ b/foodgram/recipes/templates/includes/recipe_card.html
@@ -21,19 +21,20 @@
         </div>
     </div>
     <div class="card__footer">
-
-        {% if recipe.id|in_purchases:request.session %}
+    {% if user.is_authenticated %}
+        {% if recipe.id|in_purchases:user %}
             <button class="button button_style_light-blue-outline" name="purchases"><span class="icon-check button__icon"></span> Рецепт добавлен</button>
         {% else %}
             <button class="button button_style_light-blue" name="purchases" data-out><span class="icon-plus button__icon"></span>Добавить в покупки</button>
         {% endif %}
-        {% if user.is_authenticated and user != recipe.author %}
+        {% if user != recipe.author %}
             {% if recipe.id|is_favorite:user %}
                 <button class="button button_style_none" name="favorites"><span class="icon-favorite icon-favorite_active"></span></button>
             {% else %}
                 <button class="button button_style_none" name="favorites" data-out><span class="icon-favorite"></span></button>
             {% endif %}
         {% endif %}
+    {% endif %}
 
     </div>
 </div>
