--- a/foodgram/recipes/templates/recipe_form.html
+++ b/foodgram/recipes/templates/recipe_form.html
@@ -12,7 +12,7 @@
             <h1 class="main__title">{% if recipe %}Редактирование{% else %}Создание{%endif%} рецепта</h1>
         </div>
         <div class="form-container">
-            <form class="form" method="post" enctype="multipart/form-data" action="{% if recipe %}{% url 'recipe_update' slug=recipe.slug %}{% else %}{% url 'new_recipe' %}{% endif %}">
+            <form class="form" method="post" enctype="multipart/form-data" action="{% if recipe %}{% url 'recipe_edit' pk=recipe.id %}{% else %}{% url 'new_recipe' %}{% endif %}">
                 {% csrf_token %}
                 {% load user_filters %}
             {% with form.title as field %}
@@ -29,6 +29,15 @@
                     {% include 'includes/recipe_form_fields/label.html' %}
                     <div class="form__field-group">
                         <div class="tags" style="display: flex; flex-wrap: wrap; gap: 12px;">
+                        {% if recipe %}
+                            {% for tag, value in field.field.choices %}
+                            <div class="tags__item">
+                                <input type="checkbox" name="tags" id="id_{{ tag.instance.slug }}" class="tags__checkbox tags__checkbox_style_{{ tag.instance.color }}" value="{{ tag.instance.id }}"
+                                {% if tag.instance.id in form.tags.value or tag.instance in recipe.tags.all %} checked {% endif %}>
+                                <label for="id_{{ tag.instance.slug }}" class="tags__label">{{ tag.instance.title }}</label>
+                            </div>
+                            {% endfor %}
+                        {% else %}
                             {% for tag, value in field.field.choices %}
                             <div class="tags__item">
                                 <input type="checkbox" name="tags" id="id_{{ tag.instance.slug }}" class="tags__checkbox tags__checkbox_style_{{ tag.instance.color }}" value="{{ tag.instance.id }}"
@@ -36,6 +45,7 @@
                                 <label for="id_{{ tag.instance.slug }}" class="tags__label">{{ tag.instance.title }}</label>
                             </div>
                             {% endfor %}
+                        {% endif %}
                         </div>
                     {% include 'includes/recipe_form_fields/error.html' %}
                     </div>
@@ -54,24 +64,20 @@
                             <label for="cantidad" class="form__label" id="cantidadVal">шт.</label>
                         </div>
                     <div class="form__field-group-ingredientes-container">
-                    {% if form.ingredients %}
                         {% for i in recipe.amount.all %}
                             {% with forloop.counter as counter %}
                             <div class="form__field-item-ingredient" id="ing_{{ counter }}">
                             <span> {{ i.ingredient.title }} - {{ i.amount }} {{ i.ingredient.unit }}</span>
-{#                            <span class="form__field-item-delete"></span>#}
+                            <span class="form__field-item-delete"></span>
                             <input id="nameIngredient_{{ counter }}" name="nameIngredient_{{ counter }}" type="hidden" value="{{ i.ingredient.title }}">
                             <input id="valueIngredient_{{ counter }}" name="valueIngredient_{{ counter }}" type="hidden" value="{{ i.amount }}">
                             <input id="unitsIngredient_{{ counter }}" name="unitsIngredient_{{ counter }}" type="hidden" value="{{ i.ingredient.unit }}">
                         </div>
                             {% endwith %}
                         {% endfor %}
-                    {% endif %}
                     </div>
                     <span class="form__ingredient-link" id="addIng">Добавить ингредиент</span>
-                    {% with form.ingredients as field %}
-                      {% include 'includes/recipe_form_fields/error.html' %}
-                    {% endwith %}
+                        <span class="form__error">{{ form.non_field_errors }}</span>
                   </div>
                 </div>
 
@@ -90,7 +96,7 @@
                 {% with form.description as field %}
                     {% include 'includes/recipe_form_fields/label.html' %}
                     <div class="form__field-group">
-                        <textarea name="description" id="id_description" rows="8" class="form__textarea"></textarea>
+                        {{ field|add_class:'form__textarea' }}
                         {% include 'includes/recipe_form_fields/error.html' %}
                     </div>
                 {% endwith %}
@@ -99,8 +105,16 @@
                 {% with form.image as field %}
                     {% include 'includes/recipe_form_fields/label.html' %}
                     <div class="form__field-group">
-                        {{ field }}
+                        <label for="id_image" class="form__file-button">Выбрать файл</label>
+                        {{ field|add_class:'form__file' }}
+                        <span id='upload-file-name'></span>
                         {% include 'includes/recipe_form_fields/error.html' %}
+                        <script>
+                            document.getElementById('id_image').onchange = function () {
+                              document.getElementById("upload-file-name").innerHTML = this.files.item(0).name;
+                            };
+
+                        </script>
                     </div>
                 {% endwith %}
                 </div>
@@ -108,7 +122,7 @@
                 <div class="form__footer">
                     {% if recipe %}
                     <button class="button button_style_blue">Сохранить</button>
-                    <a style="margin-left: 2.5em" href="{% url 'recipe_delete' recipe.slug %}" class="form__ingredient-link">Удалить</a>
+                    <a style="margin-left: 2.5em" href="{% url 'recipe_delete' recipe.id %}" class="form__ingredient-link">Удалить</a>
                     {% else %}
                     <button class="button button_style_blue">Создать рецепт</button>
                     {% endif %}
