--- a/foodgram/templates/includes/navigation.html
+++ b/foodgram/templates/includes/navigation.html
@@ -1,4 +1,4 @@
-{% with request.resolver_match.url_name as url_name %}
+{% with request.resolver_match.view_name as url_name %}
 <nav class="nav">
     <div class="nav__container container">
         <ul class="nav__items list">
@@ -7,7 +7,7 @@
             <li class="nav__item {% if url_name == 'subscriptions' %} nav__item_active {% endif %}"><a href="{% url 'subscriptions' %}" class="nav__link link">Мои подписки</a></li>
             <li class="nav__item {% if url_name == 'new_recipe' %} nav__item_active {% endif %}"><a href="{% url 'new_recipe' %}" class="nav__link link">Создать рецепт</a></li>
             <li class="nav__item {% if url_name == 'favorites' %} nav__item_active {% endif %}"><a href="{% url 'favorites' %}" class="nav__link link">Избранное</a></li>
-            <li class="nav__item {% if url_name == 'purchases' %} nav__item_active {% endif %}"><a href="{% url 'purchases' %}" class="nav__link link">Список покупок</a> <span class="badge badge_style_blue nav__badge" id="counter">{% if view.counter %}{{ view.counter }}{% else %}0{% endif %}</span></li>
+            <li class="nav__item {% if url_name == 'purchases' %} nav__item_active {% endif %}"><a href="{% url 'purchases' %}" class="nav__link link">Список покупок</a> <span class="badge badge_style_blue nav__badge" id="counter">{% if cart_counter > 0 %}{{ cart_counter }}{% endif %}</span></li>
         {% endif %}
 
         </ul>
