--- a/foodgram/recipes/templates/shop_list.html
+++ b/foodgram/recipes/templates/shop_list.html
@@ -29,7 +29,7 @@
     {% endfor %}
 
         </ul>
-        <a href="#"><button class="button button_style_blue">Скачать список</button></a>
+        <a href="{% url 'download cart' %}"><button class="button button_style_blue">Скачать список</button></a>
     </div>
 </main>
 {% endblock %}
