review 2 + generator improvements

--- a/foodgram/templates/misc/about.html
+++ b/foodgram/templates/misc/about.html
@@ -14,7 +14,7 @@
         <a class="custom-text-block" href="https://github.com/khmaker">Страница автора на GitHub</a>
 
         <div class="custom-button-block">
-            <a href=""><button class="button button_style_blue">Перейти на главную</button></a>
+            <a href="{% url 'index' %}"><button class="button button_style_blue">Перейти на главную</button></a>
 
         </div>
 
