--- a/foodgram/templates/misc/404.html
+++ b/foodgram/templates/misc/404.html
@@ -14,7 +14,7 @@
         <p class="custom-text-block">Страница <code>{{ path }}</code> не найдена</p>
 
         <div class="custom-button-block">
-            <a href=""><button class="button button_style_blue">Перейти на главную</button></a>
+            <a href="{% url 'index' %}"><button class="button button_style_blue">Перейти на главную</button></a>
 
         </div>
 
