--- a/foodgram/templates/misc/tech.html
+++ b/foodgram/templates/misc/tech.html
@@ -34,7 +34,7 @@
         </div>
 
         <div class="custom-button-block"  style="padding-top: 24px">
-            <a href=""><button class="button button_style_blue">Перейти на главную</button></a>
+            <a href="{% url 'index' %}"><button class="button button_style_blue">Перейти на главную</button></a>
         </div>
 
     </div>
